syntax = "proto3";

package pudicitia.hr;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "pudicitia.common/grpc/types.proto";

option csharp_namespace = "Pudicitia.HR";

service Attendance {
  rpc PaginateLeaves (PaginateLeavesRequest) returns (PaginateLeavesResponse);
  rpc GetLeave (GetLeaveRequest) returns (GetLeaveResponse);
}

message PaginateLeavesRequest {
  pudicitia.common.PageRequired page = 1;
  google.protobuf.Timestamp started_on = 2;
  google.protobuf.Timestamp ended_on = 3;
  google.protobuf.Int32Value approval_status = 4;
}

message PaginateLeavesResponse {
  pudicitia.common.PageRequired page = 1;
  repeated Leave items = 2;

  message Leave {
    pudicitia.common.GuidRequired id = 1;
    int32 type = 2;
    google.protobuf.Timestamp started_on = 3;
    google.protobuf.Timestamp ended_on = 4;
    int32 approval_status = 5;
    pudicitia.common.GuidRequired employee_id = 6;
    string employee_name = 7;
  }
}

message GetLeaveRequest {
  pudicitia.common.GuidRequired id = 1;
}

message GetLeaveResponse {
  pudicitia.common.GuidRequired id = 1;
  int32 type = 2;
  google.protobuf.Timestamp started_on = 3;
  google.protobuf.Timestamp ended_on = 4;
  string reason = 5;
  int32 approval_status = 6;
  google.protobuf.Timestamp created_on = 7;
  pudicitia.common.GuidRequired employee_id = 8;
  string employee_name = 9;
}
